# storage-service

./: .dockerignore  .env  .env.dist  .gitignore  Cargo.toml  LICENSE-COMMERCIAL.txt  LICENSE-COMMUNITY.txt  LICENSE-DEVELOPER.txt  LICENSE-RESELLER.txt  LICENSING.md  README.md  agents.md  audit.toml  claude.md  docker-compose.yml  functional.md  package.json  task.md
.dev-temp/backend-unit-diagnostics-latest/: llvm-cov-target-files.txt
.dev-temp/backend-unit-diagnostics-latest/unit-shards/: coverage.txt
.dev-temp/backend-unit-diagnostics-new/: compose-ps.txt  llvm-cov-target-files.txt  meta.txt
.dev-temp/backend-unit-diagnostics-new/unit-shards/: coverage.txt  shard-3.list  shard-5.list
.dev-temp/ci-diagnostics/backend-unit-diagnostics/: compose-ps.txt  meta.txt
.github/workflows/: ci.yml
cmd/nss/: Cargo.toml
cmd/nss-master/: Cargo.toml
cmd/nss-master/src/: main.rs
cmd/nss-replica/: Cargo.toml
deploy/: Dockerfile.dist  Dockerfile.master  Dockerfile.memcheck  Dockerfile.replica  docker-compose.auth.test.yml  docker-compose.test.yml  docker-compose.yml  test-runner.Dockerfile
deploy/observability/: bootstrap_obs.py  demo_load.py  prometheus.yml  promtail.yml  seed_join_tokens.sh
docs/: ai-agent-guide.md  backup-restore-manual.md  configuration-guide.md  configuration-manual.md  development-manual.md  functional-description.md  installation-guide.md  openapi-admin.yaml  openapi-console.yaml  rules.md  spec.md  usage.md
docs/specks/: SDD-001-node-volume-role-and-backup-wizard.md  SDD-002-unit-sharded-coverage-determinism.md  SDD-003-unit-test-runner-image-cache.md  SDD-004-stage1-unit-diagnostics-bundle-reliability.md
docs/traefik/: stack.env  stack.yml
infra-demo/: README.md
infra-demo/keycloak-common/: realm-nss.json
infra-demo/keycloak-oauth2/: docker-compose.yml
infra-demo/keycloak-oidc/: docker-compose.yml
infra-demo/keycloak-saml2/: docker-compose.yml
internal/: Cargo.toml  lib.rs  test_support.rs
internal/api/: admin.rs  admin_storage.rs  auth.rs  console.rs  internal.rs  master.rs  mod.rs  portal.rs  replica.rs  volume_capacity.rs
internal/auth/: access_keys.rs  mod.rs  oidc.rs  password.rs  token.rs
internal/backup/: mod.rs
internal/cache/: mod.rs
internal/embedded-ui/: index.html
internal/events/: mod.rs
internal/jobs/: mod.rs
internal/meta/: backup_repos.rs  db.rs  integration.rs  migrate.rs  mod.rs  models.rs  repos.rs
internal/meta/migrations/: 0001_init.sql  0002_bucket_public.sql  0003_access_keys_user_cascade.sql  0004_snapshot_backup.sql  0005_replica_volume_mode.sql  0006_bucket_volume_bindings.sql
internal/obs/: mod.rs
internal/policy/: mod.rs
internal/s3/: chunking.rs  errors.rs  mod.rs  sigv4.rs  sigv4_core.rs  xml.rs
internal/storage/: checksum.rs  chunk_encryption.rs  chunkstore.rs  manifest.rs  mod.rs  replication.rs
internal/tests/: repo_integration.rs
internal/tests/fixtures/portal-ui-gzip/: index.html
internal/util/: config.rs  crypto.rs  http.rs  mod.rs  runtime.rs  shutdown.rs  storage_volume.rs  time.rs  usage.rs
scripts/: build-dist-inner.sh  build-dist.sh  build-production-image.sh  build-test-image.sh  cluster-tests.sh  curl-tests.sh  external-auth-tests.sh  integration-tests-sharded.sh  integration-tests.sh  it.sh  memory-leak-check.sh  migrate.sh  production-tests.sh  quality-check.py  run-tests.sh  runtime-tests.sh  security-audit.sh  ui-integration-tests.sh  ui-tests.sh  ui-unit-tests.sh  unit-tests-sharded.sh  unit-tests.sh  valgrind.supp  verify-distroless.sh
tests/playwright/: fixtures.ts  helpers.ts  package.json  playwright.config.ts  tsconfig.json
web/console-ui/: angular.json  package-lock.json  package.json  tsconfig.json  vitest.config.integration.ts  vitest.config.unit.ts
(+50 files in other folders)
