[workspace]
members = [
  "internal",
  "cmd/nss",
  "cmd/nss-master",
  "cmd/nss-replica"
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros", "tokio"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
crc32c = "0.6.8"
base64 = "0.22.1"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_urlencoded = "0.7.1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "form",
  "stream",
  "rustls-no-provider",
  "charset",
  "http2",
  "system-proxy"
] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.10.0"
futures-util = "0.3.31"
http-body-util = "0.1.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
aes-gcm = "0.10.3"
libc = "0.2.181"
percent-encoding = "2.3.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
  "derive"
] }
async-trait = "0.1.89"
dashmap = "6.1.0"
serde_with = "3.16.1"
quick-xml = { version = "0.39.0", features = ["serialize"] }
prometheus = "0.14.0"
tokio-util = "0.7.18"
lapin = { version = "4.0.0", default-features = false, features = [
  "rustls--ring",
  "rustls-webpki-roots-certs",
  "default-runtime"
] }
time = "0.3.47"
md5 = { package = "md-5", version = "0.10" }
url = "2.5.8"
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
include_dir = "0.7.4"
tar = "0.4.44"
flate2 = "1.1.5"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
