[package]
name = "nss_core"
version = "0.1.0"
edition = "2021"
rust-version = "1.93"

[lib]
path = "lib.rs"

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
crc32c = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde_urlencoded = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
http-body-util = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
aes-gcm = { workspace = true }
libc = { workspace = true }
percent-encoding = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde_with = { workspace = true }
quick-xml = { workspace = true }
prometheus = { workspace = true }
tokio-util = { workspace = true }
lapin = { workspace = true }
time = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
redis = { workspace = true }
include_dir = { workspace = true }
rustls = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
